--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.10",
     "express": "^4.18.2",
     "firebase-admin": "^11.7.0",
     "jimp": "^0.22.10",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "nanoid": "^3.3.6",
+    "node-cron": "^3.0.3",
     "pg": "^8.8.0",
     "sequelize": "^6.32.1",
     "socket.io": "^4.7.2",
